--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -322,4 +322,19 @@
 
     <string name="show_page_indicator_title">Show page indicator</string>
     <string name="show_page_indicator_summary">Using horizontal lines</string>
+
+    <!-- At a glance style -->
+    <string name="date_style_font">Date font</string>
+    <string name="date_style_font_system">System default</string>
+    <string name="date_style_font_google" translatable="false">Google Sans</string>
+
+    <string-array name="date_style_font_names" translatable="false">
+        <item>@string/date_style_font_system</item>
+        <item>@string/date_style_font_google</item>
+    </string-array>
+
+    <string-array name="date_style_font_values" translatable="false">
+        <item>system</item>
+        <item>google</item>
+    </string-array>
 </resources>
