Launcher3: Allow At a glance to be full uppercase
This will shout you out the day of the week

--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -337,4 +337,8 @@
         <item>system</item>
         <item>google</item>
     </string-array>
+
+    <string name="date_style_transform_title">Show uppercase on date</string>
+    <string name="date_style_transform_summary">Transform all the date/at a glance with uppercased text</string>
+
 </resources>
