--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -341,4 +341,24 @@
     <string name="date_style_transform_title">Show uppercase on date</string>
     <string name="date_style_transform_summary">Transform all the date/at a glance with uppercased text</string>
 
+    <string name="date_style_spacing">Date spacing</string>
+    <string name="date_style_spacing_normal">Normal</string>
+    <string name="date_style_spacing_barely">Barely noticeable</string>
+    <string name="date_style_spacing_aesthetic" translatable="false">A e s t h e t i c</string>
+    <string name="date_style_spacing_ott">Over the top</string>
+
+    <string-array name="date_style_spacing_names" translatable="false">
+        <item>@string/date_style_spacing_normal</item>
+        <item>@string/date_style_spacing_barely</item>
+        <item>@string/date_style_spacing_aesthetic</item>
+        <item>@string/date_style_spacing_ott</item>
+    </string-array>
+
+    <string-array name="date_style_spacing_values" translatable="false">
+        <item>normal</item>
+        <item>barely</item>
+        <item>aesthetic</item>
+        <item>overthetop</item>
+    </string-array>
+
 </resources>
