Launcher3: disable DOTS_ONLY for badge renderer
and show also the number of notifications

Change-Id: Ic2e9df346ad4672c3ad5b288f3d5de5f12cca1fe

Bootleggers edit: Let's adapt to the LeanSettings way and add a respective switchpreference to make it toggable

--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -384,6 +384,13 @@
                 android:summary="@string/generate_adaptive_background_summary"
                 android:title="@string/generate_adaptive_background_title" />
 
+            <SwitchPreference
+                android:defaultValue="false"
+                android:key="pref_show_badge_counter"
+                android:persistent="true"
+                android:summary="@string/show_badge_count_summary"
+                android:title="@string/show_badge_count_title" />
+
         </PreferenceCategory>
 
         <PreferenceCategory
