--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -343,58 +343,94 @@
     <!-- At a glance style -->
     <string name="date_style_font">Date font</string>
     <string name="date_style_font_system">System default</string>
+    <string name="date_style_font_abelreg" translatable="false">Abel</string>
     <string name="date_style_font_adamcg" translatable="false">Adan CG Pro</string>
     <string name="date_style_font_alienleague" translatable="false">Alien League</string>
+    <string name="date_style_font_archivonar" translatable="false">Archivo Narrow</string>
+    <string name="date_style_font_badscript" translatable="false">Bad Script</string>
     <string name="date_style_font_bignoodleital" translatable="false">Big Noodle Tilting Italic</string>
     <string name="date_style_font_biko" translatable="false">Biko</string>
+    <string name="date_style_font_cherryswash" translatable="false">Cherry Swash</string>
     <string name="date_style_font_ginorasans" translatable="false">Ginora Sans</string>
     <string name="date_style_font_gobold" translatable="false">GoBold Light</string>
     <string name="date_style_font_google" translatable="false">Google Sans</string>
+    <string name="date_style_font_ibmplex" translatable="false">IBM Plex Mono Light</string>
     <string name="date_style_font_inkferno" translatable="false">Inkferno</string>
     <string name="date_style_font_instruction" translatable="false">Instruction</string>
     <string name="date_style_font_jacklane" translatable="false">Jack Lane</string>
+    <string name="date_style_font_kellyslab" translatable="false">Kelly Slab</string>
     <string name="date_style_font_monad" translatable="false">Monad</string>
     <string name="date_style_font_noir" translatable="false">Noir</string>
     <string name="date_style_font_outrunfuture" translatable="false">Outrun Future</string>
+    <string name="date_style_font_pompiere" translatable="false">Pompiere</string>
+    <string name="date_style_font_raleway" translatable="false">Raleway</string>
+    <string name="date_style_font_reemkufi" translatable="false">Reem Kufi</string>
     <string name="date_style_font_riviera" translatable="false">Riviera</string>
+    <string name="date_style_font_satify" translatable="false">Satisfy</string>
+    <string name="date_style_font_seaweedsc" translatable="false">Seaweed Script</string>
     <string name="date_style_font_theoutbox" translatable="false">The Outbox</string>
+    <string name="date_style_font_voltaire" translatable="false">Voltaire</string>
 
     <string-array name="date_style_font_names" translatable="false">
         <item>@string/date_style_font_system</item>
+        <item>@string/date_style_font_abelreg</item>
         <item>@string/date_style_font_adamcg</item>
         <item>@string/date_style_font_alienleague</item>
+        <item>@string/date_style_font_archivonar</item>
+        <item>@string/date_style_font_badscript</item>
         <item>@string/date_style_font_bignoodleital</item>
         <item>@string/date_style_font_biko</item>
+        <item>@string/date_style_font_cherryswash</item>
         <item>@string/date_style_font_ginorasans</item>
         <item>@string/date_style_font_gobold</item>
         <item>@string/date_style_font_google</item>
+        <item>@string/date_style_font_ibmplex</item>
         <item>@string/date_style_font_inkferno</item>
         <item>@string/date_style_font_instruction</item>
         <item>@string/date_style_font_jacklane</item>
+        <item>@string/date_style_font_kellyslab</item>
         <item>@string/date_style_font_monad</item>
         <item>@string/date_style_font_noir</item>
         <item>@string/date_style_font_outrunfuture</item>
+        <item>@string/date_style_font_pompiere</item>
+        <item>@string/date_style_font_raleway</item>
+        <item>@string/date_style_font_reemkufi</item>
         <item>@string/date_style_font_riviera</item>
+        <item>@string/date_style_font_satify</item>
+        <item>@string/date_style_font_seaweedsc</item>
         <item>@string/date_style_font_theoutbox</item>
+        <item>@string/date_style_font_voltaire</item>
     </string-array>
 
     <string-array name="date_style_font_values" translatable="false">
         <item>system</item>
+        <item>abelreg</item>
         <item>adamcg</item>
         <item>alien</item>
+        <item>archivonar</item>
+        <item>badscript</item>
         <item>bignoodle</item>
         <item>biko</item>
+        <item>cherryswash</item>
         <item>ginora</item>
         <item>gobold</item>
         <item>google</item>
+        <item>ibmplex</item>
         <item>inkferno</item>
         <item>instruction</item>
         <item>jacklane</item>
+        <item>kellyslab</item>
         <item>monad</item>
         <item>noir</item>
         <item>outrun</item>
+        <item>pompiere</item>
+        <item>raleway</item>
+        <item>reemkufi</item>
         <item>riviera</item>
+        <item>satisfy</item>
+        <item>seaweedsc</item>
         <item>theoutbox</item>
+        <item>voltaire</item>
     </string-array>
 
     <string name="date_style_transform_title">Show uppercase on date</string>
