Revert "Removing support for app prediction from Launcher3"
This reverts commit b1d222e9a76cc733cead3343a4b7c1e39daa190c.

Change-Id: I5d7ed938c9817527c251a08b57a7f1e6564f3e28

--- a/res/xml/device_profiles.xml
+++ b/res/xml/device_profiles.xml
@@ -26,6 +26,7 @@
         launcher:numAllAppColumns="3"
         launcher:numFolderRows="2"
         launcher:numFolderColumns="3"
+        launcher:minAllAppsPredictionColumns="3"
         launcher:iconSize="48"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="3"
@@ -41,6 +42,7 @@
         launcher:numAllAppColumns="3"
         launcher:numFolderRows="3"
         launcher:numFolderColumns="3"
+        launcher:minAllAppsPredictionColumns="3"
         launcher:iconSize="48"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="3"
@@ -56,6 +58,7 @@
         launcher:numAllAppColumns="4"
         launcher:numFolderRows="3"
         launcher:numFolderColumns="4"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="48"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="5"
@@ -71,6 +74,7 @@
         launcher:numAllAppColumns="4"
         launcher:numFolderRows="3"
         launcher:numFolderColumns="4"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="48"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="5"
@@ -86,6 +90,7 @@
         launcher:numAllAppColumns="4"
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="48"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="5"
@@ -101,6 +106,7 @@
         launcher:numAllAppColumns="4"
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="54"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="5"
@@ -116,6 +122,7 @@
         launcher:numAllAppColumns="4"
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="54"
         launcher:iconTextSize="13.0"
         launcher:numHotseatIcons="5"
@@ -131,6 +138,7 @@
         launcher:numAllAppColumns="5"
         launcher:numFolderRows="4"
         launcher:numFolderColumns="4"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="56"
         launcher:iconTextSize="14.4"
         launcher:numHotseatIcons="5"
@@ -146,6 +154,7 @@
         launcher:numAllAppColumns="6"
         launcher:numFolderRows="4"
         launcher:numFolderColumns="5"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="64"
         launcher:iconTextSize="14.4"
         launcher:numHotseatIcons="7"
@@ -161,6 +170,7 @@
         launcher:numAllAppColumns="6"
         launcher:numFolderRows="4"
         launcher:numFolderColumns="5"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="76"
         launcher:iconTextSize="14.4"
         launcher:numHotseatIcons="7"
@@ -176,6 +186,7 @@
         launcher:numAllAppColumns="7"
         launcher:numFolderRows="6"
         launcher:numFolderColumns="6"
+        launcher:minAllAppsPredictionColumns="4"
         launcher:iconSize="100"
         launcher:iconTextSize="20.0"
         launcher:numHotseatIcons="7"
