--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -79,4 +79,13 @@
     <string name="desktop_show_label_summary">Show the labels of apps on the homescreen</string>
     <string name="allapps_show_label_summary">Show the labels of apps in the app drawer</string>
 
+    <!-- Hidden apps -->
+    <string name="customize">Customize</string>
+    <string name="hide_app">Hide app</string>
+    <string name="hide_app_sum">Hide app from the app drawer</string>
+    <string name="hide_app_selected">&#160;selected</string>
+    <string name="hidden_app">Hidden app</string>
+    <string name="hide_selected">Hide selected app</string>
+    <string name="more">More</string>
+
 </resources>
