--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -86,5 +86,7 @@
     <string name="hidden_app">All apps</string>
     <string name="hide_selected">Hide selected app(s)</string>
     <string name="more">More</string>
+    <string name="reset_hidden_apps">Reset all</string>
+    <string name="reset_hidden_apps_done">Hidden apps are now available</string>
 
 </resources>
