Launcher3: Set a toggle to show Quickspace on first screen
Instead of hardcoding it on the FeatureFlags, let's make it
toggleable as any other option would do

Also, let's use Google At a Glance strings

Change-Id: I59893308efa357d25bdd3d53e31904e90c4d84ca

--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -96,4 +96,8 @@
     <string name="reset_hidden_apps">Reset all</string>
     <string name="reset_hidden_apps_done">Hidden apps are now available</string>
 
+    <!-- Show quickspace -->
+    <string name="show_quickspace_title">At A Glance</string>
+    <string name="show_quickspace_summary">Show at the top of your Home screen</string>
+
 </resources>
