--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -8,6 +8,13 @@
         android:defaultValue="true"
         android:persistent="true" />
 
+    <SwitchPreference
+        android:key="pref_show_quickspace"
+        android:title="@string/show_quickspace_title"
+        android:summary="@string/show_quickspace_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
+
     <ListPreference
         android:key="pref_hotseat_icons"
         android:title="@string/number_of_hotseat_title"
