Luna: Add Qsb to hotseat and all apps view
This is a mixed port of the new QSB on pixel devices.
The base is ported from the Pixel 2 Launcher while some functions
and behavior are from the Pixel 3 Launcher.

Change-Id: I593064e4e17c70d0b84abb8dc08eeefc7c93846a

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -44,7 +44,8 @@
         <item name="widgetsTheme">@style/WidgetContainerTheme</item>
     </style>
 
-    <style name="LauncherTheme" parent="@style/BaseLauncherThemeWithCustomAttrs"></style>
+    <style name="LauncherTheme" parent="@style/BaseLauncherThemeWithCustomAttrs">
+    </style>
 
     <style name="LauncherTheme.DarkText" parent="@style/LauncherTheme">
         <item name="workspaceTextColor">#FF212121</item>
@@ -176,6 +177,16 @@
     <style name="AppTheme.DarkText" parent="@style/LauncherTheme.DarkText" />
     <style name="AppTheme.Dark" parent="@style/LauncherTheme.Dark" />
     <style name="AppTheme.Dark.DarkText" parent="@style/LauncherTheme.Dark.DarkText" />
+
+    <style name="HotseatQsbTheme">
+        <item name="gIcon">@drawable/ic_super_g_shadow</item>
+        <item name="micIcon">@drawable/ic_mic_shadow</item>
+    </style>
+
+    <style name="HotseatQsbTheme.Colored" parent="@style/HotseatQsbTheme">
+        <item name="gIcon">@drawable/ic_super_g_color</item>
+        <item name="micIcon">@null</item>
+    </style>
 
     <!--
     Theme overrides to element on homescreen, i.e., which are drawn on top on wallpaper.
