--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -229,4 +229,17 @@
 
     <!-- QuickSpace -->
     <dimen name="quickspace_title_size">24dp</dimen>
+
+    <!-- Hotseat QSB -->
+    <dimen name="qsb_shadow_margin">6dp</dimen>
+    <dimen name="qsb_widget_height">56dp</dimen>
+    <dimen name="qsb_hotseat_bottom_margin">-4dp</dimen>
+    <dimen name="qsb_hotseat_bottom_margin_hw">12dp</dimen>
+    <dimen name="qsb_mic_width">56.0dip</dimen>
+    <dimen name="hotseat_qsb_scroll_shadow_blur_radius">1.5dp</dimen>
+    <dimen name="hotseat_qsb_scroll_key_shadow_offset">2dp</dimen>
+    <dimen name="all_apps_extra_search_padding">8dp</dimen>
+    <!-- Approximates the system status bar height. Not guaranteed to be always be correct. -->
+    <dimen name="status_bar_height">24dp</dimen>
+    <dimen name="all_apps_search_bar_height">60dp</dimen>
 </resources>
