--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -111,4 +111,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="quick_event_ambient_now_playing">Now Playing</string>
     <string name="quick_event_ambient_song_artist">%1$s by %2$s</string>
 
+    <!-- Hotseat QSB -->
+    <string name="label_search">Search</string>
+    <string name="label_voice_search">Voice search</string>
+    <string name="default_live_wallpaper">com.breel.wallpapers/com.breel.wallpapers.dioramas.lagos.LagosWallpaperService</string>
+
 </resources>
