--- a/res/layout/all_apps.xml
+++ b/res/layout/all_apps.xml
@@ -30,7 +30,9 @@
 
     <include layout="@layout/all_apps_floating_header" />
 
-    <include layout="@layout/search_container_all_apps_include" />
+    <include
+        android:id="@id/search_container_all_apps"
+        layout="@layout/search_container_all_apps"/>
 
     <include layout="@layout/all_apps_fast_scroller" />
 </com.android.launcher3.allapps.AllAppsContainerView>
