--- a/res/drawable/bg_qsb_click_feedback.xml
+++ b/res/drawable/bg_qsb_click_feedback.xml
@@ -22,7 +22,7 @@
     <ripple android:color="@color/focused_background">
         <item android:id="@android:id/mask">
             <shape android:shape="rectangle">
-                <solid android:color="@android:color/white" />
+                <solid android:color="?attr/popupColorPrimary" />
                 <stroke android:width="0dp" />
                 <corners android:radius="100dp" />
             </shape>
