--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -40,4 +40,8 @@
     <color name="all_apps_bg_hand_fill_dark">#9AA0A6</color>
     <color name="all_apps_bg_hand_fill_black">@*android:color/black</color>
     <color name="all_apps_bg_hand_fill_customtheme">@*android:color/background_material_dark</color>
+
+    <!-- Icon colors -->
+    <color name="qsb_icons_accent">@*android:color/accent_device_default_light</color>
+    
 </resources>
