--- a/res/values/shishu_dimens.xml
+++ b/res/values/shishu_dimens.xml
@@ -38,4 +38,8 @@
     <dimen name="all_apps_label_top_padding">16.0dip</dimen>
     <dimen name="all_apps_prediction_row_divider_height">17.0dip</dimen>
 
+    <!-- Hide/Show search bars -->
+    <dimen name="dynamic_grid_hotseat_top_padding_hidden_bottom_qsb">8dp</dimen>
+    <dimen name="dynamic_grid_hotseat_bottom_padding_hidden_bottom_qsb">0dp</dimen>
+
 </resources>
