--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -131,4 +131,8 @@
     <string name="label_turn_off_suggestions">TURN OFF</string>
     <string name="all_apps_label">All apps</string>
 
+    <!-- Hide/Show search bars -->
+    <string name="bottom_search_bar_title">Show search bar on bottom</string>
+    <string name="bottom_search_bar_summary">Show the search bar on the Dock</string>
+
 </resources>
