--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -49,6 +49,13 @@
         android:key="home_hotseat_category"
         android:title="@string/home_hotseat_title">
 
+    <SwitchPreference
+        android:key="pref_bottom_search_bar"
+        android:title="@string/bottom_search_bar_title"
+        android:summary="@string/bottom_search_bar_summary"
+        android:defaultValue="true"
+        android:persistent="true" />
+
     <ListPreference
         android:key="pref_hotseat_icons"
         android:title="@string/number_of_hotseat_title"
