--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -241,4 +241,8 @@
     <!-- Approximates the system status bar height. Not guaranteed to be always be correct. -->
     <dimen name="status_bar_height">24dp</dimen>
     <dimen name="all_apps_search_bar_height">60dp</dimen>
+    <!-- Hide/Show search bars -->
+    <dimen name="dynamic_grid_hotseat_top_padding_hidden_bottom_qsb">8dp</dimen>
+    <dimen name="dynamic_grid_hotseat_bottom_padding_hidden_bottom_qsb">0dp</dimen>
+
 </resources>
