--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -57,6 +57,16 @@
         android:persistent="true" />
 
     <ListPreference
+        android:dependency="pref_bottom_search_bar"
+        android:entries="@array/search_provider_names"
+        android:entryValues="@array/search_provider_values"
+        android:key="pref_search_provider"
+        android:defaultValue="https://www.google.com"
+        android:persistent="true"
+        android:summary="%s"
+        android:title="@string/search_provider_title" />
+
+    <ListPreference
         android:key="pref_hotseat_icons"
         android:title="@string/number_of_hotseat_title"
         android:summary="%s"
