--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -135,4 +135,10 @@
     <string name="bottom_search_bar_title">Show search bar on bottom</string>
     <string name="bottom_search_bar_summary">Show the search bar on the Dock</string>
 
+    <!-- Search engine -->
+    <string name="search_provider_title">Searchbar search engine</string>
+    <string name="search_provider_google" translatable="false">Google</string>
+    <string name="search_provider_bing" translatable="false">Bing</string>
+    <string name="search_provider_duckduckgo" translatable="false">DuckDuckGo</string>
+
 </resources>
