--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -34,6 +34,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="home_grid_title">Grid layout</string>
     <string name="icon_layout_title">Icon layout</string>
     <string name="home_overall_title">Home layout</string>
+    <string name="home_quickspace_title">At A Glance</string>
     <string name="home_hotseat_title">Dock</string>
     <string name="app_overall_title">App list</string>
     <string name="misc_recents_title">Recents</string>
@@ -99,7 +100,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="allapps_show_label_summary">Show the labels of apps in the app drawer</string>
 
     <!-- Show quickspace -->
-    <string name="show_quickspace_title">At A Glance</string>
+    <string name="show_quickspace_title">Show At A Glance</string>
     <string name="show_quickspace_summary">Show at the top of your Home screen</string>
 
     <!-- QuickSpace -->
@@ -125,5 +126,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="search_provider_google" translatable="false">Google</string>
     <string name="search_provider_bing" translatable="false">Bing</string>
     <string name="search_provider_duckduckgo" translatable="false">DuckDuckGo</string>
+
+    <string name="date_format_title">Date format</string>
+    <string name="date_format_long_name">Long</string>
+    <string name="date_format_normal_name">Normal</string>
+    <string name="date_format_short_name">Short</string>
+    <string name="date_format_long" translatable="false">EEEE, MMMM d</string>
+    <string name="date_format_normal" translatable="false">EEEE, MMM d</string>
+    <string name="date_format_short" translatable="false">EEE, MMM d</string>
 
 </resources>
