--- a/res/values/shishu_config.xml
+++ b/res/values/shishu_config.xml
@@ -18,4 +18,7 @@
 
 <resources>
     <bool name="allow_swipe_down_clearall">false</bool>
+
+    <!-- Quickspace -->
+    <item type="id" name="reserved_container_workspace" />
 </resources>
