--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -29,4 +29,7 @@
     <string name="state_loading">Applying\u2026</string>
     <string name="app_drawer_category_title">App drawer</string>
 
+    <!-- QuickSpace -->
+    <string name="abbrev_wday_month_day_no_year">EEEEMMMd</string>
+
 </resources>
