Luna: Integrate Google Feed
If Google Search is installed, the Google Feed can be found at
the -1 screen (which is the very left).
This feature is enabled by default.

Change-Id: I495196818699fd378cd60e6dd61b07a0ab951762

--- a/res/values/shishu_config.xml
+++ b/res/values/shishu_config.xml
@@ -21,4 +21,7 @@
 
     <!-- Quickspace -->
     <item type="id" name="reserved_container_workspace" />
+
+    <!-- Google Feed -->
+    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
 </resources>
