--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -109,4 +109,11 @@
     <string name="show_quickspace_title">At A Glance</string>
     <string name="show_quickspace_summary">Show at the top of your Home screen</string>
 
+    <!-- QuickSpace: QuickEvent: Device Intro Event -->
+    <string name="quick_event_custom_intro_welcome">Welcome to Bootleggers!</string>
+    <string name="quick_event_custom_intro_learn">Let\'s get this bread</string>
+    <!-- QuickSpace: QuickEvent: Ambient Play -->
+    <string name="quick_event_ambient_now_playing">Now Playing</string>
+    <string name="quick_event_ambient_song_artist">%1$s by %2$s</string>
+
 </resources>
