--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -32,12 +32,12 @@
     <dimen name="dynamic_grid_cell_padding_x">8dp</dimen>
 
     <!-- Hotseat -->
-    <dimen name="dynamic_grid_hotseat_top_padding">8dp</dimen>
-    <dimen name="dynamic_grid_hotseat_bottom_padding">2dp</dimen>
+    <dimen name="dynamic_grid_hotseat_top_padding">0.0dip</dimen>
+    <dimen name="dynamic_grid_hotseat_bottom_padding">62.0dip</dimen>
     <!-- Extra bottom padding for non-tall devices. -->
-    <dimen name="dynamic_grid_hotseat_bottom_non_tall_padding">0dp</dimen>
-    <dimen name="dynamic_grid_hotseat_size">80dp</dimen>
-    <dimen name="dynamic_grid_hotseat_side_padding">0dp</dimen>
+    <dimen name="dynamic_grid_hotseat_bottom_non_tall_padding">15.0dip</dimen>
+    <dimen name="dynamic_grid_hotseat_size">70.0dip</dimen>
+    <dimen name="dynamic_grid_hotseat_side_padding">0.0dip</dimen>
 
     <!-- Hotseat/all-apps scrim -->
     <dimen name="all_apps_scrim_radius">8dp</dimen>
@@ -233,8 +233,7 @@
     <!-- Hotseat QSB -->
     <dimen name="qsb_shadow_margin">6dp</dimen>
     <dimen name="qsb_widget_height">56dp</dimen>
-    <dimen name="qsb_hotseat_bottom_margin">-4dp</dimen>
-    <dimen name="qsb_hotseat_bottom_margin_hw">12dp</dimen>
+    <dimen name="qsb_hotseat_bottom_margin">2.0dip</dimen>
     <dimen name="qsb_mic_width">56.0dip</dimen>
     <dimen name="hotseat_qsb_scroll_shadow_blur_radius">1.5dp</dimen>
     <dimen name="hotseat_qsb_scroll_key_shadow_offset">2dp</dimen>
