--- a/res/values/shishu_dimens.xml
+++ b/res/values/shishu_dimens.xml
@@ -42,4 +42,8 @@
     <dimen name="dynamic_grid_hotseat_top_padding_hidden_bottom_qsb">8dp</dimen>
     <dimen name="dynamic_grid_hotseat_bottom_padding_hidden_bottom_qsb">0dp</dimen>
 
+    <!-- Custom Recents corners -->
+    <dimen name="task_corner_radius_default">2dp</dimen>
+    <dimen name="task_corner_radius_round">8dp</dimen>
+    <dimen name="task_corner_radius_op">16dp</dimen>
 </resources>
