--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <PreferenceCategory
+        android:key="home_overall_category"
+        android:title="@string/home_overall_title">
+
     <SwitchPreference
         android:key="pref_enable_minus_one"
         android:title="@string/pref_show_google_now_title"
@@ -15,15 +19,6 @@
         android:defaultValue="true"
         android:persistent="true"/>
 
-    <ListPreference
-        android:key="pref_hotseat_icons"
-        android:title="@string/number_of_hotseat_title"
-        android:summary="%s"
-        android:entries="@array/grid_names"
-        android:entryValues="@array/grid_values"
-        android:defaultValue="-1"
-        android:persistent="true" />
-
     <SwitchPreference
         android:key="pref_desktop_show_label"
         android:title="@string/app_show_label_title"
@@ -31,12 +26,7 @@
         android:defaultValue="true"
         android:persistent="true"/>
 
-    <SwitchPreference
-        android:key="pref_allowRotation"
-        android:title="@string/allow_rotation_title"
-        android:summary="@string/allow_rotation_desc"
-        android:defaultValue="@bool/allow_rotation"
-        android:persistent="true" />
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="home_grid_category"
@@ -59,6 +49,41 @@
             android:entryValues="@array/grid_values"
             android:defaultValue="-1"
             android:persistent="true" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="home_hotseat_category"
+        android:title="@string/home_hotseat_title">
+
+    <ListPreference
+        android:key="pref_hotseat_icons"
+        android:title="@string/number_of_hotseat_title"
+        android:summary="%s"
+        android:entries="@array/grid_names"
+        android:entryValues="@array/grid_values"
+        android:defaultValue="-1"
+        android:persistent="true" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="home_misc_category"
+        android:title="@string/misc_category_title">
+
+    <SwitchPreference
+        android:key="pref_feed_integration"
+        android:title="@string/google_feed_title"
+        android:summary="@string/google_feed_summary"
+        android:defaultValue="true"
+        android:persistent="true" />
+
+    <SwitchPreference
+        android:key="pref_allowRotation"
+        android:title="@string/allow_rotation_title"
+        android:summary="@string/allow_rotation_desc"
+        android:defaultValue="@bool/allow_rotation"
+        android:persistent="true" />
 
     </PreferenceCategory>
 
