Redo IconPack support based on RootlessPixelLauncher
 - credits @amirzaidi

--- a/res/values/shishu_strings.xml
+++ b/res/values/shishu_strings.xml
@@ -213,4 +213,10 @@
     <string name="custom_recents_corners_type_card">Rounded Card</string>
     <string name="custom_recents_corners_type_op">OP Style</string>
 
+    <!-- Icon packs -->
+    <string name="iconPackPackageDefault" translatable="false">""</string>
+    <string name="icon_pack">Icon pack</string>
+    <string name="icon_pack_summary">Select a custom icon pack</string>
+    <string name="icon_pack_none">None</string>
+
 </resources>
