--- a/res/xml/icons_preferences.xml
+++ b/res/xml/icons_preferences.xml
@@ -18,6 +18,12 @@
         </intent>
     </com.android.launcher3.views.ButtonPreference>
 
+    <com.android.launcher3.iconpack.CustomIconPreference
+        android:key="pref_icon_pack"
+        android:title="@string/icon_pack"
+        android:summary="@string/icon_pack_summary"
+        android:persistent="true" />
+
         <ListPreference
             android:key="pref_icon_size"
             android:title="@string/icon_size_title"
