--- a/res/values/shishu_config.xml
+++ b/res/values/shishu_config.xml
@@ -24,4 +24,11 @@
 
     <!-- Google Feed -->
     <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
+
+    <!-- QSB -->
+    <item type="id" name="hotseat_qsb_menu_item" />
+    <item type="id" name="drag_indicator" />
+    <item type="id" name="g_icon" />
+    <item type="id" name="mic_icon" />
+
 </resources>
