--- a/res/values/shishu_styles.xml
+++ b/res/values/shishu_styles.xml
@@ -24,4 +24,10 @@
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
+    <!-- QSB -->
+    <style name="HotseatQsbTheme">
+        <item name="gIcon">@drawable/ic_super_g_color</item>
+        <item name="micIcon">@drawable/ic_poodle_color</item>
+    </style>
+
 </resources>
