--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="dynamic_grid_edge_margin">8dp</dimen>
     <dimen name="dynamic_grid_page_indicator_line_height">1dp</dimen>
     <dimen name="dynamic_grid_icon_drawable_padding">8dp</dimen>
+    <dimen name="dynamic_grid_min_page_indicator_size">16dp</dimen>
     <dimen name="dynamic_grid_workspace_top_padding">8dp</dimen>
     <dimen name="dynamic_grid_workspace_page_spacing">8dp</dimen>
     <!-- Minimum space between workspace and hotseat in spring loaded mode -->
@@ -32,11 +33,11 @@
     <dimen name="dynamic_grid_cell_padding_x">8dp</dimen>
 
     <!-- Hotseat -->
-    <dimen name="dynamic_grid_hotseat_top_padding">8dp</dimen>
-    <dimen name="dynamic_grid_hotseat_bottom_padding">2dp</dimen>
+    <dimen name="dynamic_grid_hotseat_top_padding">0dp</dimen>
+    <dimen name="dynamic_grid_hotseat_bottom_padding">72dp</dimen>
     <!-- Extra bottom padding for non-tall devices. -->
-    <dimen name="dynamic_grid_hotseat_bottom_non_tall_padding">0dp</dimen>
-    <dimen name="dynamic_grid_hotseat_size">80dp</dimen>
+    <dimen name="dynamic_grid_hotseat_bottom_non_tall_padding">15dp</dimen>
+    <dimen name="dynamic_grid_hotseat_size">70dp</dimen>
     <dimen name="dynamic_grid_hotseat_side_padding">0dp</dimen>
 
     <!-- Hotseat/all-apps scrim -->
@@ -229,4 +230,17 @@
 
     <!-- QuickSpace -->
     <dimen name="quickspace_title_size">24dp</dimen>
+
+    <!-- QSB -->
+    <dimen name="hotseat_qsb_scroll_key_shadow_offset">2.0dip</dimen>
+    <dimen name="hotseat_qsb_scroll_shadow_blur_radius">1.5dip</dimen>
+    <dimen name="qsb_doodle_tap_target_logo_width">106.0dip</dimen>
+    <dimen name="qsb_margin_top_adjusting">20.0dip</dimen>
+    <dimen name="qsb_max_hint_length">130.0dip</dimen>
+    <dimen name="qsb_mic_width">56.0dip</dimen>
+    <dimen name="qsb_hint_text_size">13.0sp</dimen>
+    <dimen name="qsb_shadow_margin">6.0dip</dimen>
+    <dimen name="qsb_text_spacing">20.0dip</dimen>
+    <dimen name="qsb_two_bubble_gap">8.0dip</dimen>
+    <dimen name="qsb_widget_height">56.0dip</dimen>
 </resources>
