Luna: Add support for app predictions
Ported from Pixel 3 launcher and adpated to work with
a basic prediction method for now, until reflections
can be properly ported

This implementation supports 2 types of dividers. Line and Label.
By default, we seperate the predictions by label (All apps)

Change-Id: I71b1b08e18b42a3d98efca2e1c2be95b3381a03b

--- a/res/xml/app_drawer_preferences.xml
+++ b/res/xml/app_drawer_preferences.xml
@@ -6,6 +6,13 @@
         android:title="@string/app_overall_title">
 
     <SwitchPreference
+        android:title="@string/app_suggestions_title"
+        android:key="pref_app_suggestions"
+        android:summary="@string/app_suggestions_summary"
+        android:defaultValue="true"
+        android:persistent="true" />
+
+    <SwitchPreference
         android:key="pref_allapps_show_label"
         android:title="@string/app_show_label_title"
         android:summary="@string/allapps_show_label_summary"
