--- a/res/values/shishu_colors.xml
+++ b/res/values/shishu_colors.xml
@@ -24,5 +24,12 @@
 
     <!-- QSB -->
     <color name="qsb_drawer_text_color_normal">#ff212121</color>
+
+    <!-- Predictions -->
+    <color name="all_apps_prediction_row_separator">#3c000000</color>
+    <color name="all_apps_prediction_row_separator_dark">#3cffffff</color>
+    <color name="all_apps_label_text">#61000000</color>
+    <color name="all_apps_label_text_dark">#61ffffff</color>
+
 </resources>
 
