--- a/res/xml/home_screen_preferences.xml
+++ b/res/xml/home_screen_preferences.xml
@@ -2,9 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreference
-        android:key="pref_feed_integration"
-        android:title="@string/google_feed_title"
-        android:summary="@string/google_feed_summary"
+        android:key="pref_enable_minus_one"
+        android:title="@string/pref_show_google_now_title"
+        android:summary="@string/pref_show_google_now_summary"
         android:defaultValue="true"
         android:persistent="true" />
 
