--- a/res/layout/item_preferences.xml
+++ b/res/layout/item_preferences.xml
@@ -23,10 +23,8 @@
 
         <ImageView
             android:id="@android:id/icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
     </LinearLayout>
 
     <RelativeLayout
