--- a/res/layout/item_preferences.xml
+++ b/res/layout/item_preferences.xml
@@ -8,7 +8,8 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+    android:theme="@style/PopupItem">
 
     <LinearLayout
         android:id="@+id/icon_frame"
