--- a/res/xml/edit_preferences.xml
+++ b/res/xml/edit_preferences.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreference
         android:defaultValue="false"
@@ -25,4 +25,4 @@
         android:summary="@string/hide_app_sum"
         android:title="@string/hide_app" />
 
-</androidx.preference.PreferenceScreen>
+</android.support.v7.preference.PreferenceScreen>
