--- a/res/xml/icons_preferences.xml
+++ b/res/xml/icons_preferences.xml
@@ -21,8 +21,8 @@
     <com.android.launcher3.iconpack.CustomIconPreference
         android:key="pref_icon_pack"
         android:title="@string/icon_pack"
-        android:summary="@string/icon_pack_summary"
-        android:persistent="true" />
+        android:summary="@string/icon_pack_summary">
+    </com.android.launcher3.iconpack.CustomIconPreference>
 
         <ListPreference
             android:key="pref_icon_size"
